--- a/html/CompareNeighborhoods.html
+++ b/html/CompareNeighborhoods.html
@@ -1,85 +1,83 @@
-<!--Start by sirisha-->
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <meta name = "description" content="Compare Neighborhood">
-    <meta name="keywords" content="compare,neighborhood,university district,fremont,south lake union,ballard">
-    <meta name="robots" content="index, nofollow">
-    <title>CompareNeighborhood Page</title>
-  <!--Common Style Sheets-->
+    <meta name=“ description” content=“[key phrases]”>
+    <meta name=“robots” content=“index, nofollow”>
+    <title>Locale Finder: Compare Neighborhoods Select</title>
+
+    <!--Common Style Sheets-->
     <link rel="stylesheet" type="text/css" href="../css/reset.css" />
     <link rel="stylesheet" type="text/css" href="../css/html-semantics.css" />
     <link rel="stylesheet" type="text/css" href="../css/layout.css" />
     <link rel="stylesheet" type="text/css" href="../css/brand.css" />
-  <!-- end -->
-    <link rel="stylesheet" type="text/css" href="../css/compare.css">
+    <!--end -->
 
+    <link rel="stylesheet" type="text/css" href="../css/compare.css">
     <link href="https://fonts.googleapis.com/css?family=Philosopher" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
-
-  <!-- Header Footer Load Script -->
-    <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
-  <!-- javascrip files -->
+    
+    <!--Scripts -->
     <script type="text/javascript" src="../js/compareNeighborhood.js"></script>
+    <script type="text/javascript" src="../js/loadHeaderFooter.js"></script>
     <script type="text/javascript" src="../js/criterion.js"></script>
 </head>
-<body>
-  <div id='header'></div>
-  <div class="heading">
-     <h2>Let's Compare the neighborhoods</h2>
-  </div>
-  <div class="compareContainer">
-    <section >
-      <img  itemprop="photo" itemscope itemtype = "http://schema.org/photo" id="leftImg" src="../image/fremont.jpg" alt="NeighborhoodImage1">
-      <input id="leftInput" type="text" list="neighborhoods1" name="neighbor_names" placeholder="Enter a neighborhood" required>
-      <p id ="errorMessage1"></p>
-          <datalist itemscope itemtype = "http://schema.org/Place" id="neighborhoods1">
-              <option itemprop="name" value="University District">
-              <option itemprop="name" value="Queen Anne">
-              <option itemprop="name" value="South Lake Union">
-              <option itemprop="name" value="Ballard">
-              <option itemprop="name" value="Fremont">
-              <option itemprop="name" value="Downtown">
-              <option itemprop="name" value="Capitol Hill">
-              <option itemprop="name" value="Northgate">
-              <option itemprop="name" value="Alki">
-          </datalist>
-    </section>
-    <section>
-      <img  itemprop="photo" itemscope itemtype = "http://schema.org/photo" id='rightImg' src="../image/ud.jpg" alt="NeighborhoddImage2">
-      <input id="rightInput" type="text" list="neighborhoods2" name="neighbor_names2" placeholder="Enter a neighborhood" required>
-      <p id ="errorMessage2"></p>
-         <datalist itemscope itemtype = "http://schema.org/Place" id="neighborhoods2">
-              <option itemprop="name" value="University District">
-              <option itemprop="name" value="Queen Anne">
-              <option itemprop="name" value="South Lake Union">
-              <option itemprop="name" value="Ballard">
-              <option itemprop="name" value="Fremont">
-              <option itemprop="name" value="Downtown">
-              <option itemprop="name" value="Capitol Hill">
-              <option itemprop="name" value="Northgate">
-              <option itemprop="name" value="Alki">
-          </datalist>
 
-    </section>
-  </div>
-  <div class="compareButton">
-    <button type = "submit" class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling">Compare</button>
-    <!-- <button class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling"  onclick="goBack()">Back</button> -->
-  </div>
-  <div class="compareDetails"><span itemscope itemtype="https://schema.org/Question">
+<body>
+    <div id='header'></div>
+    <div class="heading">
+        <h2>Let's Compare the neighborhoods</h2>
+    </div>
+    <div class="compareContainer">
+        <section>
+            <img itemprop="photo" itemscope itemtype="http://schema.org/photo" id="leftImg" src="../image/fremont.jpg" alt="NeighborhoodImage1">
+            <input id="leftInput" type="text" list="neighborhoods1" name="neighbor_names" placeholder="Enter a neighborhood" required>
+            <p id="errorMessage1"></p>
+            <datalist itemscope itemtype="http://schema.org/Place" id="neighborhoods1">
+                <option itemprop="name" value="University District">
+                    <option itemprop="name" value="Queen Anne"></option>
+                    <option itemprop="name" value="South Lake Union"></option>
+                    <option itemprop="name" value="Ballard"></option>
+                    <option itemprop="name" value="Fremont"></option>
+                    <option itemprop="name" value="Downtown"></option>
+                    <option itemprop="name" value="Capitol Hill"></option>
+                    <option itemprop="name" value="Northgate"></option>
+                    <option itemprop="name" value="Alki"></option>
+            </datalist>
+        </section>
+        <section>
+            <img itemprop="photo" itemscope itemtype="http://schema.org/photo" id='rightImg' src="../image/ud.jpg" alt="NeighborhoddImage2">
+            <input id="rightInput" type="text" list="neighborhoods2" name="neighbor_names2" placeholder="Enter a neighborhood" required>
+            <p id="errorMessage2"></p>
+            <datalist itemscope itemtype="http://schema.org/Place" id="neighborhoods2">
+                <option itemprop="name" value="University District"></option>
+                <option itemprop="name" value="Queen Anne"></option>
+                <option itemprop="name" value="South Lake Union"></option>
+                <option itemprop="name" value="Ballard"></option>
+                <option itemprop="name" value="Fremont"></option>
+                <option itemprop="name" value="Downtown"></option>
+                <option itemprop="name" value="Capitol Hill"></option>
+                <option itemprop="name" value="Northgate"></option>
+                <option itemprop="name" value="Alki"></option>
+            </datalist>
+        </section>
+    </div>
+    <div class="compareButton">
+        <button type="submit" class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling">Compare</button>
+        <!-- <button class="lf-button lf-button-brand  lf-padding-large lf-margin-top lf-large buttonStyling"  onclick="goBack()">Back</button> -->
+    </div>
+    <div class="compareDetails"><span itemscope itemtype="https://schema.org/Question">
       <h2 itemprop="name">How do we Compare ?</h2></span>
-      <span itemprop="suggestedAnswer acceptedAnswer" itemscope itemtype="https://schema.org/Answer">
+        <span itemprop="suggestedAnswer acceptedAnswer" itemscope itemtype="https://schema.org/Answer">
       <p> We compare the two neighborhoods which you choose above across the Seattle.
       <p> We show the score with respect to different criteria for each neighborhood.
-      <span itemprop="text">We take into account the 5 most important metrics for each neighborhood which includes: crime stats, Transit score, cost of living, education, and housing.
-        Further information can be explored by clicking the "Compare".</span>
-      </span>
-  </div>
-  <div id='footer'></div>
-  <script src="../js/setter.js" type="text/javascript"></script>
-  </body>
+      <span itemprop="text">We take into account the 5 most important metrics for each neighborhood which includes: crime stats, Transit score, cost of living, education, and housing.Further information can be explored by clicking the "Compare".</span>
+        </span>
+    </div>
+    <div id='footer'></div>
+    <script src="../js/setter.js" type="text/javascript"></script>
+</body>
 </html>
