--- a/html/SuggestionsPage.html
+++ b/html/SuggestionsPage.html
@@ -49,7 +49,7 @@
         </div>
         <div id='graphs' class="lf-bg1">
             <div class="lf-padding-large">
-                <h2 class="lf-xlarge ">Comparison of the top 3 neighborhoods</h2>
+                <h2>Comparison of the top 3 neighborhoods</h2>
             </div>
             <div class="card-container mobileLayout desktopLayout">
                 <!--id='suggestedArea' -->
